Fix z-indexes

--- a/less/blocks/categories-nav.less
+++ b/less/blocks/categories-nav.less
@@ -45,5 +45,7 @@
 @media (min-width: @desktop-width) {
   .categories-nav {
     display: block;
+
+    z-index: 1;
   }
 }
