--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -33,6 +33,8 @@
 
     bottom: -39px;
     right: 49px;
+
+    z-index: 1;
   }
 }
 
