--- a/less/blocks/promo.less
+++ b/less/blocks/promo.less
@@ -112,7 +112,7 @@
     padding-top: 151px;
 
     position: relative;
-    z-index: -1;
+    z-index: 0;
 
     &::after {
       content: "";
@@ -152,6 +152,8 @@
     width: 668px;
 
     margin: 0 auto;
+
+    position: relative;
   }
 
   .promo__item {
@@ -184,7 +186,7 @@
 @media (min-width: @desktop-width) {
   .promo {
     max-width: @desktop-width;
-    
+
     padding-top: 152px;
 
     &::after {
